--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "@types/json-stringify-safe": "5.0.1",
     "clsx": "1.2.1",
+    "json-stringify-safe": "5.0.1",
     "react-aria": "3.21.0",
     "react-icons": "4.6.0",
     "react-stately": "3.19.0",
