--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@typescript-eslint/parser": "^7.0.2",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "@types/json-stringify-safe": "5.0.1",
+    "@types/lodash": "4.14.202",
     "clsx": "1.2.1",
-    "json-stringify-safe": "5.0.1",
+    "lodash": "4.17.21",
     "react-aria": "3.21.0",
     "react-icons": "4.6.0",
     "react-stately": "3.19.0",
+    "react-json-view": "1.21.3",
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
